...
                    <view key="view" contentMode="scaleToFill" id="8J5-kn-J9E">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="ash" borderStyle="roundedRect" placeholder="username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8cU-6b-cil">
                                <rect key="frame" x="0.0" y="255" width="600" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="usernameTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="mistyS2" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sgc-jD-Ugn">
                                <rect key="frame" x="0.0" y="295" width="600" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bej-8R-cPh">
                                <rect key="frame" x="281" y="335" width="38" height="30"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginBtnTapped:" destination="Msd-ly-QGm" eventType="touchUpInside" id="vd3-Kh-Ek2"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pokemon" translatesAutoresizingMaskIntoConstraints="NO" id="tJQ-p5-oEC">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="210"/>
...
